--- a/package.json
+++ b/package.json
@@ -2,25 +2,42 @@
   "name": "@renditions/get-srcset",
   "version": "1.0.1",
   "description": "Generate the srcset attribute for HTML img and picture tags",
-  "main": "src/index.js",
+  "main": "getSrcset.dist.js",
+  "browser": "getSrcset.dist.min.js",
+  "types": "getSrcset.d.ts",
+  "files": [
+    "getSrcset.dist.js",
+    "getSrcset.dist.min.js",
+    "getSrcset.d.ts",
+    "getSrcset.ts"
+  ],
   "scripts": {
-    "standard": "standard --global jest --global describe --global it --global expect --global beforeEach",
-    "test": "npm run standard && jest",
-    "tdd": "jest --watch"
+    "prepare": "./build.sh",
+    "test": "jest",
+    "lint": "eslint *.ts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/renditions/get-srcset.git"
   },
-  "author": "Stef <stef@srilq.email>",
+  "author": "Stef Jones <stef@srilq.email>",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/renditions/get-srcset/issues"
   },
-  "homepage": "https://renditions.dev",
+  "homepage": "https://github.com/renditions/get-srcset#readme",
   "devDependencies": {
+    "@types/jest": "26.0.24",
+    "@typescript-eslint/eslint-plugin": "4.29.1",
+    "esbuild": "0.12.20",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-jest": "24.4.0",
+    "eslint-plugin-prettier": "3.4.0",
     "jest": "27.0.6",
-    "standard": "16.0.3"
+    "prettier": "2.3.2",
+    "ts-jest": "27.0.4",
+    "typescript": "4.3.5"
   },
   "keywords": [
     "srcset",
