--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@types/jest": "26.0.24",
     "@typescript-eslint/eslint-plugin": "4.29.2",
     "esbuild": "0.12.20",
+    "esbuild-jest": "^0.5.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jest": "24.4.0",
     "eslint-plugin-prettier": "3.4.0",
     "jest": "27.0.6",
     "prettier": "2.3.2",
-    "ts-jest": "27.0.4",
     "typescript": "4.3.5"
   },
   "keywords": [
