--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "es6",
     "module": "esnext",
     "moduleResolution": "node",
-    "lib": ["es6", "dom", "dom.iterable"],
+    "lib": ["es6"],
     "allowJs": false,
     "jsx": "react",
     "strict": true,
