--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,17 +3,13 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:prettier/recommended",
     "plugin:jest/recommended",
     "plugin:jest/style"
   ],
-  "env": {
-    "es6": true,
-    "node": true,
-    "jest/globals": true
+  "parserOptions": {
+    "project": "./tsconfig.json"
   },
-  "rules": {
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-implicit-any-catch": "error"
-  }
+  "reportUnusedDisableDirectives": true
 }
